refactor: refactor third config
--story=1020526 --user=王旭 技术优化-系统配置-三方设置 https://www.tapd.cn/34675357/s/1820034